--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-VITE_FIREBASE_API_KEY=your_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_app_id 
+VITE_FIREBASE_API_KEY=AIzaSyDCm6AZs1fazrJ0O-Z9jn9zNmpfjiyav4I
+VITE_FIREBASE_AUTH_DOMAIN=atom-hr-e563b.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=atom-hr-e563b
+VITE_FIREBASE_STORAGE_BUCKET=atom-hr-e563b.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=892360447754
+VITE_FIREBASE_APP_ID=1:892360447754:web:8c0dcb5b150560985a8cf3
+VITE_FIREBASE_MEASUREMENT_ID=G-DG78ETW47P 
